tests/kyverno-policies/keycloakclient/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: keycloakclient
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: keycloakclient
    rule: pass-redirecturi
    resources:
      - paas-pass-list
      - paas-pass-wildcard
      - paas-pass-single
    kind: KeycloakClient
    result: pass
  - policy: keycloakclient
    rule: pass-redirecturi
    resources:
      - skip
    kind: KeycloakClient
    result: skip
  - policy: keycloakclient
    rule: pass-redirecturi
    resources:
      - paas-fail-list
      - paas-fail-wildcard
      - paas-fail-single
    kind: KeycloakClient
    result: fail
